Using cmake as a build system I created a configure script which executes cmake To compile: path/configure --host=something make

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
+cmake_minimum_required(VERSION 2.6)
 project(OSDevLibC)
 
+set(CMAKE_C_FLAGS "-nostdlib -O3")
 include_directories(./include) 
+
 add_library(osdevc STATIC src/errno.c src/math_exp.c src/math_misc.c src/math_pow.c src/math_trigo.c src/stdio.c src/stdlib.c src/string.c src/uchar.c src/wchar.c)
+
