Added install instructions in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_C_FLAGS "-nostdlib -O3")
 include_directories(./include) 
 
 add_library(osdevc STATIC src/errno.c src/math_exp.c src/math_misc.c src/math_pow.c src/math_trigo.c src/stdio.c src/stdlib.c src/string.c src/uchar.c src/wchar.c)
-
+install(TARGETS osdevc DESTINATION ${PROJECT_SOURCE_DIR}/bin)
